* FIXED: Removed limits on # rows/columns of devices with a format object
  attached (used to be 1024x1024).

* ADDED: Class variable text_item.combo_box_heigth to define the maximum
  height of completer/combox box windows (default 6).

* FIXED: Sometimes wrong assumption of control-key in XPCE editors (notably
  after incremental search.

* FIXED: `@pce->console_label' to deal with renamed console.dll --> plterm.dll

* FIXED: `image->draw_in' for selected graphicals.  Reported by Frank
  Cornelissen.

* FIXED: `editor->sort_lines_in_region': memory handling problem (sometimes
  crached).

* FIXED: `image->save', opening file in wrong mode.  Patch by Frank
  Cornelissen.  Thanks.

* FIXED: `editor->save_buffer' caused crash if an error occurred during
  writing the file.

* FIXED: `file<-read' on Windows for not-so-large files and Unix for
  truely large files.  Also a lot faster now.  Reported by Bob Wielinga.

* FIXED: Various ISO Prolog compatibility issues.

* FIXED: Take care of module-local operator specifications.  Fixes problems
  with autoloading.

* ADDED: Generated files to the source-distribution to allow for recompiling
  under Windows.

* ADDED: --enable-mt configuration option to provide rudimentary support
  for multi-threading.  Supports pceMTLock(int lockid) and
  pceMTUnlock(int lockid).  Requires thread-safe version of the X11 libraries.
  Used for cooperation with the multi-threaded SWI-Prolog version.

VERSION 5.0.7
=============

* ADDED: Compatibility to SWI-Prolog 3.3.0 (More ISO stuff)

* ADDED: `vector->for_all' and other vector-iteration methods now accept
  optional `from' and `to' to limit the range and/or enumerate backwards.

* ADDED: `chain->for_all' and other chain-iteration methods now pass the
  index of the current element in @arg2 for compatibility to class vector.
  Suggested by Uwe Lesta.

* FIXED: `vector->insert' (reference-count problem). Thanks to Uwe Lesta.
