@@ -1,3 +1,5 @@
+* ADDED: Class chain_hyper to express mutual dependent objects.
+
 * FIXED: Removed limits on # rows/columns of devices with a format object
   attached (used to be 1024x1024).
 
